🔄 Limpeza de eventos antigos e adição de novos eventos de teste

--- a/eventos/TesteEvent/config/settings.json
+++ b/eventos/TesteEvent/config/settings.json
@@ -1,16 +1,21 @@
 {
-  "nome": "Evento de Teste",
-  "data": "2025-04-18",
-  "compartilhamento": {
-    "whatsapp_ativo": false,
-    "whatsapp_numero": "",
-    "backup_ativo": false,
-    "backup_pasta": ""
-  },
-  "impressao": {
-    "auto_imprimir": false
-  },
-  "ia": {
-    "ativar": false
-  }
+    "nome": "Evento de Teste",
+    "data": "2025-04-18",
+    "compartilhamento": {
+        "whatsapp_ativo": false,
+        "whatsapp_numero": "",
+        "backup_ativo": false,
+        "backup_pasta": ""
+    },
+    "impressao": {
+        "auto_imprimir": false
+    },
+    "ia": {
+        "ativar": false
+    },
+    "modo_teste": true,
+    "layout": {
+        "arquivo": ""
+    },
+    "smugmug": {}
 }
